--- a/DataProject/View/Main.storyboard
+++ b/DataProject/View/Main.storyboard
@@ -48,6 +48,11 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="BucketItemSymbol" destination="Lmp-zw-Ych" id="HMI-ao-JDQ"/>
+                                    <outlet property="BucketItemText" destination="6Kw-xb-SR9" id="7j4-In-IPf"/>
+                                    <outlet property="bucketItemSignature" destination="OZ1-Am-qbJ" id="FOL-M3-Zcm"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
